--- a/MILESTONE 1/index.html
+++ b/MILESTONE 1/index.html
@@ -5,10 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css' integrity='sha512-HHsOC+h3najWR7OKiGZtfhFIEzg5VRIPde0kB0bG2QRidTQqf+sbfcxCTB16AcFB93xMjnBIKE29/MjdzXE+qw==' crossorigin='anonymous'/>
+
     <link rel="stylesheet" href="css/style.css">
     <title>Carousel</title>
 </head>
 <body>
+
+    <div class="main-wrapper">
+        <div class="container">
+            <div class="slider">
+                <img src="img/01.jpg" alt="" class="item">
+            </div>
+            <div class="btn-arrow up">
+                <i class="fa-solid fa-chevron-up"></i>
+            </div>
+            <div class="btn-arrow down">
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="mini-slider">
+
+            </div>
+        </div>
+    </div>
     
     <script src="js/script.js"></script>
 </body>
