add if condition to click event

--- a/MILESTONE 3/index.html
+++ b/MILESTONE 3/index.html
@@ -13,13 +13,9 @@
 <body>
 
     <div class="main-wrapper">
-        <div class="container debug">
+        <div class="container">
             <div class="slider">
-                <!-- <img src="img/01.jpg" alt="" class="item active">
-                <img src="img/02.jpg" alt="" class="item">
-                <img src="img/03.jpg" alt="" class="item">
-                <img src="img/04.jpg" alt="" class="item">
-                <img src="img/05.jpg" alt="" class="item"> -->
+
             </div>
             <div class="btn-arrow up">
                 <i class="fa-solid fa-chevron-up"></i>
@@ -28,7 +24,11 @@
                 <i class="fa-solid fa-chevron-down"></i>
             </div>
             <div class="mini-slider">
-
+                 <!-- <img src="img/01.jpg" alt="" class="mini-item active">
+                <img src="img/02.jpg" alt="" class="mini-item">
+                <img src="img/03.jpg" alt="" class="mini-item">
+                <img src="img/04.jpg" alt="" class="mini-item">
+                <img src="img/05.jpg" alt="" class="mini-item">  -->
             </div>
         </div>
     </div>
